# code_names_bot

./: config.py  pyproject.toml
caches/: compares (old).json  compares.json  guesses  guesses.json  guesses_old.yaml  guesses_v2.yaml  proposal_for_count.json  proposals.json  scores (seed=0).json  scores.json  scores_old.json  scores_v2.json
clues/: (old) full-boards_propose-for-count-score.yaml  full-boards_immediate.yaml  full-boards_manual.yaml  full-boards_propose-10-score (4).yaml  full-boards_propose-10-score.yaml  full-boards_propose-filter-rank.yaml  full-boards_propose-score(old).yaml  full-boards_propose-score.yaml  pairs-small_immediate.yaml  pairs-small_manual.yaml  pairs-small_propose-filter-rank(9-18).yaml  pairs-small_propose-filter-rank(old).yaml  pairs-small_propose-filter-rank(v2).yaml  pairs-small_propose-filter-rank.yaml  pairs-small_propose-rank-prefilter(old).yaml  pairs-small_propose-rank-prefilter.yaml  pairs-small_propose-rank-vote.yaml  pairs-small_propose-rank.yaml  pairs-small_target-all.yaml  pairs_small_manual.yaml
code_names_bot/: create_scenarios.py  evaluate.py  generate_clues.py  guess_clues.py  migrate.py
code_names_bot/checks/: check_propose_filter_rank.py  propose_score_gaps.py  (+4 more)
guesses/: pairs-small_immediate.yaml  pairs-small_manual.yaml  pairs-small_propose-rank-prefilter.yaml  pairs-small_propose-rank.yaml  pairs-small_target-all.yaml
prompts/: compare  filter  immediate  propose  propose-rank_rank  propose_5  propose_for_count  rank  score  target-all
scenarios/: full-boards.yaml  pairs-small.yaml  pairs_small.yaml
(+33 files in other folders)
